src/test/fail/else_without_if.lly
#[
SyntaxError: 'else' without 'if'.
Where: File "test/fail/else_without_if.lly" at line 6
]#

else
